--- a/H1EMU-Launcher/Windows/MsgBox.xaml
+++ b/H1EMU-Launcher/Windows/MsgBox.xaml
@@ -17,41 +17,69 @@
         Activated="MainMsgBoxActivated"
         Loaded="MainMsgBoxLoaded">
 
+        <!-- Hide window border but keep animations -->
         <WindowChrome.WindowChrome>
-            <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="0"/>
+            <WindowChrome
+                GlassFrameThickness="0"
+                CornerRadius="0"
+                CaptionHeight="0"
+                ResizeBorderThickness="0"
+                UseAeroCaptionButtons="False"/>
+
         </WindowChrome.WindowChrome>
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="45"/>
             <RowDefinition Height="30*"/>
         </Grid.RowDefinitions>
 
-        <!-- Top bar grid. -->
-        <Grid Grid.Row="0" Grid.Column="0" MouseLeftButtonDown="MoveMessageBox" Background="#FF2A2A32">
+        <!-- Grid for logo and exit button -->
+        <Grid 
+            MouseLeftButtonDown="MoveMessageBox"
+            Background="#FF2A2A32">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <!-- Dock panel that hosts logo -->
-            <DockPanel Grid.Row="0" Grid.Column="0" Height="40" HorizontalAlignment="Left" Margin="14,2,0,0">
-                <Button Width="104" Height="28" BorderThickness="0" VerticalAlignment="Center" Margin="0,4,0,0" Style="{DynamicResource ImageButton}">
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\H1EmuIcon.png"/>
-                    </Button.Background>
-                </Button>
+            <!-- Logo -->
+            <DockPanel
+                Margin="14,2,0,0"
+                Height="40"
+                HorizontalAlignment="Left">
+
+                <Image
+                    Source="..\Resources\H1EmuIcon.png"
+                    Width="104"
+                    Height="28"
+                    Margin="0,4,0,0"
+                    VerticalAlignment="Center"/>
+
             </DockPanel>
 
-            <!-- Dock panel that creates the exit button. -->
-            <DockPanel Grid.Column="1" Grid.Row="0" Margin="0">
-                <Button Style="{StaticResource CloseButtonStyle}" x:Name="CloseButton" RenderOptions.BitmapScalingMode="Fant" Width="38" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Right" BorderThickness="0" Margin="0,5,15,7" Click="CloseButton_Click">
+            <!-- Exit button -->
+            <DockPanel Grid.Column="1">
+                <Button x:Name="CloseButton"
+                    Click="CloseButton_Click"
+                    RenderOptions.BitmapScalingMode="Fant"
+                    Width="38"
+                    Height="25"
+                    Margin="0,5,15,7"
+                    VerticalAlignment="Bottom"
+                    HorizontalAlignment="Right"
+                    BorderThickness="0"
+                    Style="{StaticResource CloseButtonStyle}">
+                    
                     <Button.Background>
                         <ImageBrush ImageSource="..\Resources\Exit.png"/>
                     </Button.Background>
@@ -60,9 +88,20 @@
         </Grid>
 
         <!-- Grid for main content inside of darkened area -->
-        <Grid Grid.Row="1" Background="#1C1B22" Margin="15,5,15,15" UseLayoutRounding="True">
+        <Grid
+            Grid.Row="1"
+            Margin="15,5,15,15"
+            Background="#1C1B22"
+            UseLayoutRounding="True">
+            
+            <!-- Drop shadow effect -->
             <Grid.Effect>
-                <DropShadowEffect BlurRadius="8" Direction="-90" RenderingBias="Quality" ShadowDepth="1"/>
+                <DropShadowEffect
+                    BlurRadius="8"
+                    Direction="-90"
+                    RenderingBias="Quality"
+                    ShadowDepth="1"/>
+                
             </Grid.Effect>
             
             <Grid.RowDefinitions>
@@ -70,9 +109,33 @@
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             
-            <TextBlock x:Name="text" Background="Transparent" Foreground="White" Margin="25,10,25,10" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" TextAlignment="Center" Padding="0,5,0,0"/>
+            <!-- Main message box text -->
+            <TextBlock x:Name="text"
+                       Margin="25,10,25,10"
+                       Padding="0,5,0,0"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Background="Transparent"
+                       Foreground="White"
+                       TextWrapping="Wrap"
+                       TextAlignment="Center"/>
 
-            <Button Content="{DynamicResource item92}" Foreground="White" FontFamily="Arial Black" FontSize="18" Click="OkButton" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" BorderThickness="0" RenderOptions.BitmapScalingMode="Fant" Style="{DynamicResource StandardButton}">
+            <!-- Close msgbox window button -->
+            <Button
+                Grid.Row="1"
+                Click="OkButton"
+                RenderOptions.BitmapScalingMode="Fant"
+                Width="100"
+                Height="30"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Foreground="White"
+                FontFamily="Arial Black"
+                FontSize="18"
+                BorderThickness="0"
+                Content="{DynamicResource item92}"
+                Style="{DynamicResource StandardButton}">
+                
                 <Button.Background>
                     <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
                 </Button.Background>
